<resources>
    <string name="app_name">Instagram</string>
    <string name="tvPublicaciones">publicaciones</string>
    <string name="tvSeguidores">seguidores</string>
    <string name="tvSiguiendo">siguiendo</string>
    <string name="tvDesc">Venta/Reparación de dispositivos móviles</string>
    <string name="tvUser">cbarlop_2506</string>
    <string name="tvNumPubli">5</string>
    <string name="tvNumSeguidores">29 mil</string>
    <string name="tvNumSiguiendo">139</string>
</resources>