<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fotoPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_weight="0"
        android:scaleType="centerCrop"
        android:src="@drawable/fotoperfil"
        app:layout_constraintEnd_toStartOf="@+id/tvUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circle" />


    <TextView
        android:id="@+id/tvPublicaciones"
        android:layout_width="105dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tvPublicaciones"
        app:layout_constraintEnd_toStartOf="@+id/tvSeguidores"
        app:layout_constraintStart_toEndOf="@+id/fotoPerfil"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNumPubli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="69dp"
        android:text="@string/tvNumPubli"
        app:layout_constraintBottom_toTopOf="@+id/tvPublicaciones"
        app:layout_constraintEnd_toStartOf="@+id/tvNumSeguidores"
        app:layout_constraintStart_toEndOf="@+id/fotoPerfil"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSeguidores"
        android:layout_width="84dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tvSeguidores"
        app:layout_constraintEnd_toStartOf="@+id/tvSiguiendo"
        app:layout_constraintStart_toEndOf="@+id/tvPublicaciones"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSiguiendo"
        android:layout_width="79dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="13dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tvSiguiendo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSeguidores"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvUser"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoPerfil" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/acme"
        android:text="@string/tvDesc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPublicaciones"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <WebView
        android:id="@+id/video"
        android:layout_width="390dp"
        android:layout_height="177dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="493dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNumSeguidores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="56dp"
        android:text="@string/tvNumSeguidores"
        app:layout_constraintBottom_toTopOf="@+id/tvSeguidores"
        app:layout_constraintStart_toEndOf="@+id/tvNumPubli"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:text="@string/tvNumSiguiendo"
        app:layout_constraintBottom_toTopOf="@+id/tvSiguiendo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNumSeguidores"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>